tests/Tuc/Fixtures/errors/ElseMustHaveBody.tuc
tuc parse error test
participants
    GenericService parts

GenericService
    if true
        do something
    else
